Package_Tools/include-C/jxl/h/encode.h


extern uint32_t JxlEncoderVersion(void);
typedef struct JxlEncoderStruct JxlEncoder;
typedef struct JxlEncoderFrameSettingsStruct JxlEncoderFrameSettings;
typedef enum {
  JXL_ENC_SUCCESS = 0,
  JXL_ENC_ERROR = 1,
  JXL_ENC_NEED_MORE_OUTPUT = 2,
  JXL_ENC_NOT_SUPPORTED = 3,
} JxlEncoderStatus;
typedef enum {
  JXL_ENC_ERR_OK = 0,
  JXL_ENC_ERR_GENERIC = 1,
  JXL_ENC_ERR_OOM = 2,
  JXL_ENC_ERR_JBRD = 3,
  JXL_ENC_ERR_BAD_INPUT = 4,
  JXL_ENC_ERR_NOT_SUPPORTED = 0x80,
  JXL_ENC_ERR_API_USAGE = 0x81,
} JxlEncoderError;
typedef enum {
  JXL_ENC_FRAME_SETTING_EFFORT = 0,
  JXL_ENC_FRAME_SETTING_DECODING_SPEED = 1,
  JXL_ENC_FRAME_SETTING_RESAMPLING = 2,
  JXL_ENC_FRAME_SETTING_EXTRA_CHANNEL_RESAMPLING = 3,
  JXL_ENC_FRAME_SETTING_ALREADY_DOWNSAMPLED = 4,
  JXL_ENC_FRAME_SETTING_PHOTON_NOISE = 5,
  JXL_ENC_FRAME_SETTING_NOISE = 6,
  JXL_ENC_FRAME_SETTING_DOTS = 7,
  JXL_ENC_FRAME_SETTING_PATCHES = 8,
  JXL_ENC_FRAME_SETTING_EPF = 9,
  JXL_ENC_FRAME_SETTING_GABORISH = 10,
  JXL_ENC_FRAME_SETTING_MODULAR = 11,
  JXL_ENC_FRAME_SETTING_KEEP_INVISIBLE = 12,
  JXL_ENC_FRAME_SETTING_GROUP_ORDER = 13,
  JXL_ENC_FRAME_SETTING_GROUP_ORDER_CENTER_X = 14,
  JXL_ENC_FRAME_SETTING_GROUP_ORDER_CENTER_Y = 15,
  JXL_ENC_FRAME_SETTING_RESPONSIVE = 16,
  JXL_ENC_FRAME_SETTING_PROGRESSIVE_AC = 17,
  JXL_ENC_FRAME_SETTING_QPROGRESSIVE_AC = 18,
  JXL_ENC_FRAME_SETTING_PROGRESSIVE_DC = 19,
  JXL_ENC_FRAME_SETTING_CHANNEL_COLORS_GLOBAL_PERCENT = 20,
  JXL_ENC_FRAME_SETTING_CHANNEL_COLORS_GROUP_PERCENT = 21,
  JXL_ENC_FRAME_SETTING_PALETTE_COLORS = 22,
  JXL_ENC_FRAME_SETTING_LOSSY_PALETTE = 23,
  JXL_ENC_FRAME_SETTING_COLOR_TRANSFORM = 24,
  JXL_ENC_FRAME_SETTING_MODULAR_COLOR_SPACE = 25,
  JXL_ENC_FRAME_SETTING_MODULAR_GROUP_SIZE = 26,
  JXL_ENC_FRAME_SETTING_MODULAR_PREDICTOR = 27,
  JXL_ENC_FRAME_SETTING_MODULAR_MA_TREE_LEARNING_PERCENT = 28,
  JXL_ENC_FRAME_SETTING_MODULAR_NB_PREV_CHANNELS = 29,
  JXL_ENC_FRAME_SETTING_JPEG_RECON_CFL = 30,
  JXL_ENC_FRAME_INDEX_BOX = 31,
  JXL_ENC_FRAME_SETTING_BROTLI_EFFORT = 32,
  JXL_ENC_FRAME_SETTING_FILL_ENUM = 65535,
} JxlEncoderFrameSettingId;
extern JxlEncoder* JxlEncoderCreate(const JxlMemoryManager* memory_manager);
extern void JxlEncoderReset(JxlEncoder* enc);
extern void JxlEncoderDestroy(JxlEncoder* enc);
extern void JxlEncoderSetCms(JxlEncoder* enc, JxlCmsInterface cms);
extern JxlEncoderStatus
JxlEncoderSetParallelRunner(JxlEncoder* enc, JxlParallelRunner parallel_runner,
                            void* parallel_runner_opaque);
extern JxlEncoderError JxlEncoderGetError(JxlEncoder* enc);
extern JxlEncoderStatus JxlEncoderProcessOutput(JxlEncoder* enc,
                                                    uint8_t** next_out,
                                                    size_t* avail_out);
extern JxlEncoderStatus
JxlEncoderSetFrameHeader(JxlEncoderFrameSettings* frame_settings,
                         const JxlFrameHeader* frame_header);
extern JxlEncoderStatus JxlEncoderSetExtraChannelBlendInfo(
    JxlEncoderFrameSettings* frame_settings, size_t index,
    const JxlBlendInfo* blend_info);
extern JxlEncoderStatus JxlEncoderSetFrameName(
    JxlEncoderFrameSettings* frame_settings, const char* frame_name);
extern JxlEncoderStatus
JxlEncoderAddJPEGFrame(const JxlEncoderFrameSettings* frame_settings,
                       const uint8_t* buffer, size_t size);
extern JxlEncoderStatus JxlEncoderAddImageFrame(
    const JxlEncoderFrameSettings* frame_settings,
    const JxlPixelFormat* pixel_format, const void* buffer, size_t size);
extern JxlEncoderStatus JxlEncoderSetExtraChannelBuffer(
    const JxlEncoderFrameSettings* frame_settings,
    const JxlPixelFormat* pixel_format, const void* buffer, size_t size,
    uint32_t index);
extern JxlEncoderStatus JxlEncoderAddBox(JxlEncoder* enc,
                                             const JxlBoxType type,
                                             const uint8_t* contents,
                                             size_t size,
                                             JXL_BOOL compress_box);
extern JxlEncoderStatus JxlEncoderUseBoxes(JxlEncoder* enc);
extern void JxlEncoderCloseBoxes(JxlEncoder* enc);
extern void JxlEncoderCloseFrames(JxlEncoder* enc);
extern void JxlEncoderCloseInput(JxlEncoder* enc);
extern JxlEncoderStatus
JxlEncoderSetColorEncoding(JxlEncoder* enc, const JxlColorEncoding* color);
extern JxlEncoderStatus JxlEncoderSetICCProfile(JxlEncoder* enc,
                                                    const uint8_t* icc_profile,
                                                    size_t size);
extern void JxlEncoderInitBasicInfo(JxlBasicInfo* info);
extern void JxlEncoderInitFrameHeader(JxlFrameHeader* frame_header);
extern void JxlEncoderInitBlendInfo(JxlBlendInfo* blend_info);
extern JxlEncoderStatus JxlEncoderSetBasicInfo(JxlEncoder* enc,
                                                   const JxlBasicInfo* info);
extern void JxlEncoderInitExtraChannelInfo(JxlExtraChannelType type,
                                               JxlExtraChannelInfo* info);
extern JxlEncoderStatus JxlEncoderSetExtraChannelInfo(
    JxlEncoder* enc, size_t index, const JxlExtraChannelInfo* info);
extern JxlEncoderStatus JxlEncoderSetExtraChannelName(JxlEncoder* enc,
                                                          size_t index,
                                                          const char* name,
                                                          size_t size);
extern JxlEncoderStatus JxlEncoderFrameSettingsSetOption(
    JxlEncoderFrameSettings* frame_settings, JxlEncoderFrameSettingId option,
    int64_t value);
extern JxlEncoderStatus JxlEncoderFrameSettingsSetFloatOption(
    JxlEncoderFrameSettings* frame_settings, JxlEncoderFrameSettingId option,
    float value);
extern JxlEncoderStatus JxlEncoderUseContainer(JxlEncoder* enc,
                                                   JXL_BOOL use_container);
extern JxlEncoderStatus
JxlEncoderStoreJPEGMetadata(JxlEncoder* enc, JXL_BOOL store_jpeg_metadata);
extern JxlEncoderStatus JxlEncoderSetCodestreamLevel(JxlEncoder* enc,
                                                         int level);
extern int JxlEncoderGetRequiredCodestreamLevel(const JxlEncoder* enc);
extern JxlEncoderStatus JxlEncoderSetFrameLossless(
    JxlEncoderFrameSettings* frame_settings, JXL_BOOL lossless);
extern JxlEncoderStatus
JxlEncoderOptionsSetLossless(JxlEncoderFrameSettings*, JXL_BOOL);
JxlEncoderStatus
JxlEncoderOptionsSetEffort(JxlEncoderFrameSettings* frame_settings, int effort);
JxlEncoderStatus JxlEncoderOptionsSetDecodingSpeed(
    JxlEncoderFrameSettings* frame_settings, int tier);
extern JxlEncoderStatus JxlEncoderSetFrameDistance(
    JxlEncoderFrameSettings* frame_settings, float distance);
JxlEncoderStatus
JxlEncoderOptionsSetDistance(JxlEncoderFrameSettings*, float);
extern JxlEncoderFrameSettings* JxlEncoderFrameSettingsCreate(
    JxlEncoder* enc, const JxlEncoderFrameSettings* source);
JxlEncoderFrameSettings* JxlEncoderOptionsCreate(
    JxlEncoder*, const JxlEncoderFrameSettings*);
extern void JxlColorEncodingSetToSRGB(JxlColorEncoding* color_encoding,
                                          JXL_BOOL is_gray);
extern void JxlColorEncodingSetToLinearSRGB(
    JxlColorEncoding* color_encoding, JXL_BOOL is_gray);